<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_settings"
        style="@style/Toolbar"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/settings" />


    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/o_16dp"
        android:layout_marginEnd="@dimen/o_16dp"
        android:text="@string/dark_mode"
        android:textSize="@dimen/o_16sp"
        android:textColor="?attr/colorOnSecondary"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"/>

    <Button
        android:id="@+id/button_share_app"
        style="@style/SettingsButtonStyle"
        android:text="@string/share_app"
        app:drawableEndCompat="@drawable/share" />

    <Button
        android:id="@+id/button_write_support"
        style="@style/SettingsButtonStyle"
        android:text="@string/write_support"
        app:drawableEndCompat="@drawable/support" />

    <Button
        android:id="@+id/button_user_agreement"
        style="@style/SettingsButtonStyle"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>