<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackOrWhite"
    android:orientation="vertical"
    tools:context=".playlist_create.presentation.fragment.CreatePlayListFragment">

    <ImageView
        android:id="@+id/backIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/o_20dp"
        android:layout_marginTop="@dimen/o_20dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/whiteOrBlack" />

    <TextView
        android:id="@+id/tvNameFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/o_28dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist"
        android:textColor="@color/whiteOrBlack"
        android:textSize="@dimen/o_20sp"
        app:layout_constraintBottom_toBottomOf="@id/backIv"
        app:layout_constraintStart_toEndOf="@id/backIv"
        app:layout_constraintTop_toTopOf="@id/backIv" />


    <ImageView
        android:id="@+id/imageInsert"
        android:layout_width="match_parent"
        android:layout_height="@dimen/o_0dp"
        android:layout_marginStart="@dimen/o_24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="@dimen/o_24dp"
        android:background="@drawable/image_insert_create_playlist"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameFragment" />

    <EditText
        android:id="@+id/etNamePlayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/o_16dp"
        android:layout_marginTop="@dimen/o_32dp"
        android:layout_marginEnd="@dimen/o_16dp"
        android:layout_marginBottom="@dimen/o_16dp"
        android:background="@drawable/selector_edit_text"
        android:fontFamily="@font/ys_display_medium"
        android:hint="@string/name_playlist"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:maxLength="25"
        android:paddingHorizontal="@dimen/o_16dp"
        android:paddingVertical="@dimen/o_20dp"
        android:textColor="@color/whiteOrBlack"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="@dimen/o_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageInsert" />

    <EditText
        android:id="@+id/etAboutPlayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/o_16dp"
        android:layout_marginTop="@dimen/o_16dp"
        android:layout_marginEnd="@dimen/o_16dp"
        android:background="@drawable/selector_edit_text"
        android:fontFamily="@font/ys_display_medium"
        android:hint="@string/about_playlist"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:paddingHorizontal="@dimen/o_16dp"
        android:paddingVertical="@dimen/o_20dp"
        android:textColor="@color/whiteOrBlack"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textSize="@dimen/o_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNamePlayList" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/o_16dp"
        android:layout_marginEnd="@dimen/o_16dp"
        android:layout_marginBottom="@dimen/o_32dp"
        android:background="@drawable/selector_button"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create_playlist"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/o_16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>