<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playListMusicCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/playlist_main"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".about_playlist.presentation.fragment.AboutPlayListFragment">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_16dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvNamePlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_24dp"
            android:fontFamily="@font/ys_display_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/o_24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImage"
            tools:text="[Best songs 2025]" />

        <TextView
            android:id="@+id/tvAboutPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/o_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNamePlaylist"
            tools:text="[2025]" />

        <TextView
            android:id="@+id/tvTimeTracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_8dp"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/o_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAboutPlaylist"
            tools:text="[180 минут]" />

        <ImageView
            android:id="@+id/ivRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/point_ic"
            app:layout_constraintBottom_toBottomOf="@id/tvTimeTracks"
            app:layout_constraintStart_toEndOf="@id/tvTimeTracks"
            app:layout_constraintTop_toTopOf="@id/tvTimeTracks"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvCountTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/black"
            android:textSize="@dimen/o_18sp"
            app:layout_constraintStart_toEndOf="@id/ivRound"
            app:layout_constraintTop_toTopOf="@id/tvTimeTracks"
            tools:text="[25 треков]" />

        <ImageView
            android:id="@+id/bShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_16dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTimeTracks"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/bMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/three_round_ic"
            app:layout_constraintStart_toEndOf="@id/bShare"
            app:layout_constraintTop_toTopOf="@id/bShare"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/o_240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/vButton"
            android:layout_width="@dimen/o_48dp"
            android:layout_height="@dimen/o_4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/o_8dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/o_24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="26dp" />

        <FrameLayout
            android:id="@+id/flPlaceHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/o_48dp"
            android:foregroundGravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/com2_ic"
                app:tint="@color/whiteOrBlack" />

            <ImageView
                android:id="@+id/ivSunOrWiFi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/o_28dp"
                android:layout_marginTop="@dimen/o_24sp"
                android:src="@drawable/sun_ic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/o_72dp"
                android:src="@drawable/com1_ic"
                app:tint="@color/whiteOrBlack" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvPlaceHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/o_16dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/no_track_in_playlist_message"
            android:textColor="@color/whiteOrBlack"
            android:textSize="@dimen/o_18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flPlaceHolder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet"
        android:backgroundTint="@color/blackOrWhite"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="300dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/vButtonMore"
            android:layout_width="@dimen/o_48dp"
            android:layout_height="@dimen/o_4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/o_8dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivImageBS"
            android:layout_width="@dimen/o_48dp"
            android:layout_height="@dimen/o_48dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/o_12dp"
            android:layout_marginTop="@dimen/o_32dp"
            android:layout_marginBottom="@dimen/o_8dp"
            android:background="@drawable/adapter_view"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llText"
            android:layout_width="@dimen/o_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/o_8dp"
            android:layout_marginTop="@dimen/o_40dp"
            android:layout_marginBottom="@dimen/o_16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/ivImageBS"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvNamePlaylistBS"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/o_0dp"
                android:layout_marginBottom="@dimen/o_2dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:singleLine="true"
                android:textColor="@color/whiteOrBlack"
                android:textSize="@dimen/o_16sp"
                tools:text="[Best songs 2021]" />

            <TextView
                android:id="@+id/tvCountTrackBS"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:singleLine="true"
                android:textColor="@color/whiteOrBlack"
                android:textSize="@dimen/o_12sp"
                tools:text="[98 треков]" />
        </LinearLayout>

        <TextView
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_8dp"
            android:fontFamily="@font/ys_display_regular"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="@dimen/o_20dp"
            android:text="@string/share_menu"
            android:textColor="@color/whiteOrBlack"
            android:textSize="@dimen/o_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivImageBS" />

        <TextView
            android:id="@+id/editPlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:fontFamily="@font/ys_display_regular"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="@dimen/o_20dp"
            android:text="@string/edit_playlist_button"
            android:textColor="@color/whiteOrBlack"
            android:textSize="@dimen/o_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shareButton" />

        <TextView
            android:id="@+id/bDeletePlayList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:fontFamily="@font/ys_display_regular"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="@dimen/o_20dp"
            android:text="@string/delete_playlist_button"
            android:textColor="@color/whiteOrBlack"
            android:textSize="@dimen/o_16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPlayList" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>